# dau_issue

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  manage.py  pyproject.toml
dau_issue/: celery.py  expressions.py  settings.py  urls.py  wsgi.py
event/: models.py  tasks.py
event/__tests__/: factories.py  test_dau.py
event/__tests__/results/: data-1764640104816.csv
event/management/commands/: generate_events.py
event/migrations/: 0001_initial.py
pytest_fixtures/: event.py
